--- a/publications.html
+++ b/publications.html
@@ -156,94 +156,27 @@
             <div class="span8 offset1">
                <section id="published">
                   <div class="page-header">
-                     <h3>Journal Publications</h3>
+                     <h3>Conference Presentations</h3>
                   </div>
                   
-                  <section id="2025">
-                     <h3>2025</h3>
-                     <br/>
-                     <div class="row-fluid">
-                        <div class="span3">
-                           <a href="https://www.sciencedirect.com/journal/solar-compass" class="thumbnail">
-                           <img class="publications-thumb" src="publication/Solar compass.jpg" alt="Simulation solar MED system"/>
-                           </a>
-                        </div>
-                        <div class="span9">
-                           <h4>Simulation studies and experimental validation on solar multi - effect desalination system</h4>
-                           <br/>
-                           <p>Thilagan K., Advaith S., Mani. A</p>
-                           <a href="https://doi.org/10.1016/j.solcom.2025.100110">Solar Compass, Volume 13, March 2025, 100110</a>
-                        </div>
-                     </div>
-                  </section>
-                  <hr>
-
-                  <section id="2024">
+                  <section id="2024_conf">
                      <h3>2024</h3>
                      <br/>
                      <div class="row-fluid">
                         <div class="span3">
-                           <a href="https://www.sciencedirect.com/journal/thermal-science-and-engineering-progress" class="thumbnail">
-                           <img class="publications-thumb" src="publication/TSEP.jpg" alt="Experimental insights on PHX"/>
+                           <a href="https://ge.iitm.ac.in/ncrac-2024/" class="thumbnail">
+                           <img class="publications-thumb" src="conference/ncrac2024.png" alt="NCRAC2024"/>
                            </a>
                         </div>
                         <div class="span9">
-                           <h4>Experimental insights into heat transfer and pressure drop: A comparative study of copper spray coated and plain corrugated gasket plate heat exchangers</h4>
+                           <h4>Simulation studies and experimental validation on solar multi-effect desalination system in Kanyakumari</h4>
                            <br/>
-                           <p>Vijayakumar S., Advaith S., Mani A.</p>
-                           <a href="https://doi.org/10.1016/j.tsep.2024.103070">Thermal Science and Engineering Progress, Volume 56, December 2024, 103070</a>
-                        </div>
-                     </div>
-                      <hr>
-                     <div class="row-fluid">
-                        <div class="span3">
-                           <a href="https://www.sciencedirect.com/journal/solar-energy" class="thumbnail">
-                           <img class="publications-thumb" src="publication/solar energy.jpg" alt="solar cold storage system"/>
-                           </a>
-                        </div>
-                        <div class="span9">
-                           <h4>Development and performance evaluation of solar absorption cold storage system for tropical climates</h4>
-                           <br/>
-                           <p>Durga Prasad Pydi, Advaith S.</p>
-                           <a href="https://doi.org/10.1016/j.solener.2024.112822">Solar Energy, Volume 279, 1 September 2024, 112822</a>
-                        </div>
-                     </div>
-                     <hr>
-                     <div class="row-fluid">
-                        <div class="span3">
-                           <a href="https://www.sciencedirect.com/journal/applied-thermal-engineering" class="thumbnail">
-                           <img class="publications-thumb" src="publication/ate.jpg" alt="metal-foam PHX"/>
-                           </a>
-                        </div>
-                        <div class="span9">
-                           <h4>Investigation of heat transfer and pressure drop characteristics in metal-foam filled channels in a plate heat exchanger: A comparative experimental study</h4>
-                           <br/>
-                           <p>Naresh Chandora, Mani A., Advaith S.</p>
-                           <a href="https://doi.org/10.1016/j.applthermaleng.2024.122368">Applied Thermal Engineering, Volume 241, 15 March 2024, 122368</a>
+                           <p>Thilagan K., Advaith S., Mani. A</p>
+                           <a href="https://ge.iitm.ac.in/ncrac-2024">8th National and 2nd International Conference on Refrigeration and Air Conditioning, 13-15  March  2024, IIT Madras, Chennai, India, 1-9</a>
                         </div>
                      </div>
                   </section>
-                  <hr>        
-
-                  <section id="2023">
-                     <h3>2023</h3>
-                     <br/>
-                     <div class="row-fluid">
-                        <div class="span3">
-                           <a href="https://www.sciencedirect.com/journal/energy-and-ai" class="thumbnail">
-                           <img class="publications-thumb" src="publication/Energy AI.jpg" alt="boosted autoencoder for building"/>
-                           </a>
-                        </div>
-                        <div class="span9">
-                           <h4>Attention boosted autoencoder for building energy anomaly detection</h4>
-                           <br/>
-                           <p>Vijayakumar S., Advaith S., Mani A.</p>
-                           <a href="https://doi.org/10.1016/j.egyai.2023.100292">Energy and AI, Volume 14, October 2023, 100292</a>
-                        </div>
-                     </div>
-                  </section>
-                  <hr>  
-               </section> 
+                  <hr>
             </div>            
       </div>
          
