--- a/news.html
+++ b/news.html
@@ -39,20 +39,20 @@
             <div class="row-fluid post_row">
                <div class="span6 post">
                   <div class="text">
-                     <h5><a href="https://mitei.mit.edu">Lorem ipsum dolor sit amet: Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</a></h5>
+                     <h5><a href="https://tech-talk.iitm.ac.in/hot-and-cold/">Hot and Cold</a></h5>
                      <br/>
-                     <span class="date">January 11, 2018</span>
+                     <span class="date">January 21, 2025</span>
                   </div>
                   <div class="img">
-                     <a href="https://mitei.mit.edu">
-                     <img src="images/envmonitor2.png" alt="Lorem ipsum dolor sit amet: Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris">
+                     <a href="https://tech-talk.iitm.ac.in/hot-and-cold/">
+                     <img src="news/Hot-and-Cold-techtalk.jpg" alt="Hot and Cold - IITM Tech Talk">
                      </a>
                   </div>
                   <div class="text">
-                     <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+                     <p> Can the sun act as a cooling agent? Don’t be ridiculous! But that’s exactly what we have with solar-powered cold storage systems! </p>
                   </div>
                   <div class="author_box">
-                     <h6>Daniel SD</h6>
+                     <h6>Vijayakumar S.</h6>
                   </div>
                </div>
                <div class="span6 post">
@@ -156,6 +156,8 @@
             </div>
          </div>
       </div>
+
+      
       <footer id="footer">
          <div class="container-fluid">
             <div class="row-fluid">
