--- a/news.html
+++ b/news.html
@@ -74,85 +74,48 @@
                   </div>
                </div>
             </div>
+
+            <div class="row-fluid post_row">
+               <div class="span6 post">
+                  <div class="text">
+                     <h5><a href="https://tech-talk.iitm.ac.in/a-solar-multi-effect-desalination-success/">A Solar Multi-Effect Desalination Success!</a></h5>
+                     <br/>
+                     <span class="date">May 07, 2025</span>
+                  </div>
+                  <div class="img">
+                     <a href="https://tech-talk.iitm.ac.in/a-solar-multi-effect-desalination-success/">
+                     <img src="news/solar-desalination-success.jpeg" alt="A Solar Multi-Effect Desalination Success!">
+                     </a>
+                  </div>
+                  <div class="text">
+                     <p> About 97% of Earth's water is seawater, but only a small fraction is potable. IIT Madras has developed an indigenous, solar-driven, energy-efficient seawater desalination system, leveraging India's abundant solar insolation to sustainably produce clean drinking water. </p>
+                  </div>
+                  <div class="author_box">
+                     <h6>Thilagan K.</h6>
+                  </div>
+               </div>
+               <div class="span6 post">
+                  <div class="text">
+                     <h5><a href="https://tech-talk.iitm.ac.in/hot-and-cold/">Hot and Cold</a></h5>
+                     <br/>
+                     <span class="date">January 21, 2025</span>
+                  </div>
+                  <div class="img">
+                     <a href="https://tech-talk.iitm.ac.in/hot-and-cold/">
+                     <img src="news/Hot-and-Cold-techtalk.jpg" alt="Hot and Cold - IITM Tech Talk">
+                     </a>
+                  </div>
+                  <div class="text">
+                     <p> Can the sun act as a cooling agent? Don’t be ridiculous! But that’s exactly what we have with solar-powered cold storage systems! </p>
+                  </div>
+                  <div class="author_box">
+                     <h6>Vijayakumar S.</h6>
+                  </div>
+               </div>
+            </div>
+
+
             
-            <div class="row-fluid post_row">
-               <div class="span6 post">
-                  <div class="text">
-                     <h5><a href="https://mitei.mit.edu">Vitae Congue eu Consequat : Arcu cursus euismod</a></h5>
-                     <span class="date">December 13, 2017</span>
-                  </div>
-                  <div class="img">
-                     <a href="https://mitei.mit.edu">
-                     <img src="images/harnessingsolar-3.jpg" alt="Vitae Congue eu Consequat : Arcu cursus euismod">
-                     </a>
-                  </div>
-                  <div class="text">
-                     <p> Eu augue ut lectus arcu bibendum at. Vel elit scelerisque mauris pellentesque pulvinar pellentesque. Hac habitasse platea dictumst quisque sagittis purus. Elementum sagittis vitae et leo. Malesuada proin libero nunc consequat.</p>
-                     <br/>
-                     <br/>
-                  </div>
-                  <div class="author_box">
-                     <h6>Karen R. James</h6>
-                  </div>
-               </div>
-               <div class="span6 post">
-                  <div class="text">
-                     <h5><a href="https://mitei.mit.edu">Scelerisque Mauris: Ut sem nulla pharetra diam sit amet nisl suscipit.</a></h5>
-                     <span class="date">March 4, 2017</span>
-                  </div>
-                  <div class="img">
-                     <a href="https://mitei.mit.edu">
-                     <img src="images/smartplanet.png" alt="Scelerisque Mauris: Ut sem nulla pharetra diam sit amet nisl suscipit.">
-                     </a>
-                  </div>
-                  <div class="text">
-                     <p>Leo duis ut diam quam nulla porttitor massa id neque. Quam id leo in vitae turpis massa sed elementum. Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Id donec ultrices tincidunt arcu non. Nec feugiat in fermentum posuere urna nec. Et leo duis ut diam. Tincidunt eget nullam non nisi est sit amet. </p>
-                  </div>
-                  <div class="author_box">
-                     <h6>Jacob Bern</h6>
-                  </div>
-               </div>
-            </div>
-            <div class="row-fluid post_row">
-               <div class="span6 post">
-                  <div class="text">
-                     <h5><a href="https://mitei.mit.edu">Vulputate Dignissim Suspendisse: Purus sit amet</a></h5>
-                     <br/>
-                     <span class="date">November 11, 2017</span>
-                  </div>
-                  <div class="img">
-                     <a href="https://mitei.mit.edu">
-                     <img src="images/parabolic.jpg" alt="Vulputate Dignissim Suspendisse: Purus sit amet">
-                     </a>
-                  </div>
-                  <div class="text">
-                     <p>Ultricies lacus sed turpis tincidunt id aliquet. Ultricies mi eget mauris pharetra et ultrices. Velit dignissim sodales ut eu sem. Senectus et netus et malesuada fames ac turpis egestas. Commodo quis imperdiet massa tincidunt nunc.</p>
-                     <br/>
-                  </div>
-                  <div class="author_box">
-                     <h6>Sarmin Kato</h6>
-                  </div>
-               </div>
-               <div class="span6 post">
-                  <div class="text">
-                     <h5><a href="https://mitei.mit.edu">Lorem Ipsum Dolor: Enim ut sem viverra aliquet?</a></h5>
-                     <br/>
-                     <span class="date">October 31, 2017</span>                     
-                  </div>
-                  <div class="img">
-                     <a href="https://mitei.mit.edu">
-                     <img src="images/solarenergypowerstation.jpg" alt="Lorem Ipsum Dolor: Enim ut sem viverra aliquet?">
-                     </a>
-                  </div>
-                  <div class="text">
-                     <p> Nisl condimentum id venenatis a condimentum vitae. Leo vel orci porta non pulvinar. Phasellus vestibulum lorem sed risus ultricies tristique nulla. Egestas tellus rutrum tellus pellentesque eu tincidunt tortor aliquam nulla. </p>
-                     <br/>
-                  </div>
-                  <div class="author_box">
-                     <h6>Joe Orwell</h6>
-                  </div>
-               </div>
-            </div>
          </div>
       </div>
 
